Package: R.rsp
==============

Version: 0.4.3 [2011-02-20]
o DOCUMENTATION: Added example(rsptex).
o DOCUMENTATION: First draft of a article on how to generate
  dynamic reports by extending LaTeX with RSP.


Version: 0.4.2 [2011-02-14]
o DOCUMENTATION: Added a section to help(rsptex) explaining in what 
  environment the RSP document is evaluated and how to retrieve it 
  and its content.
o BUG FIX: parseRsp() would generate invalid R code/R comments for
  multiline <%=...%> statements.


Version: 0.4.1 [2011-01-06]
o DOCUMENTATION: Clarified in the help of HttpDaemon that it is only 
  connections from the local host (127.0.0.1) that are accepted.
  This lowers the risk for unauthorized access to the R session.


Version: 0.4.0 [2010-09-15]
o BUG FIX: browseRsp(path="/R/settings/options.rsp") and
  browseRsp(path="/R/settings/par.rsp") was throwing "Error in
  help("par", pager = stdoutPager): unused argument(s) 
  (pager = stdoutPager)" in R >= 2.10.0.


Version: 0.3.7 [2010-08-04]
o BUG FIX: browseRsp(path="/R/system/packages.rsp") would throw
  "Error in eval(expr, envir, enclos): subscript out of bounds".


Version: 0.3.6 [2009-09-16]
o Updated the HTTP header generated by the builtin webserver from
  'HTTP/1.x [...]' to 'HTTP/1.1 [...]'.  Thanks Ryan Bressler
  (Institute for Systems Biology, Seattle) for reporting this.


Version: 0.3.5 [2009-02-23]
o Added rsptex() to compiling a *.tex.rsp file into a *.dvi file
  via *.tex.rsp -> *.tex.rsp.R -> *.tex -> *.dvi.
o Added compileRsp(), which utilizes internal translateRsp() 
  which in turn calls parseRsp().
o Renamed old translateRsp() to translateRspV1(), which 
  sourceRsp() is still utilizing.


Version: 0.3.4 [2008-03-06]
o BUG FIX: Regular expression pattern 'a-Z' is illegal on (at least) 
  some locale, e.g. 'C' (where 'A-z' works). The only way to specify 
  the ASCII alphabet is to list all characters explicitly, which we now
  do in all methods of the package.  See the r-devel thread 