@@ -1,5 +1,3 @@
 library("R.rsp")
 path <- system.file("tex.rsp", package="R.rsp")
-rsptex("report.tex.rsp", path=path, pdf=TRUE)
-
-
+rsptex("report.tex.rsp", path=path)
